# why

./: .gitignore  AGENT_BRIEFING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README copy.md  README.md  rules.toml  rules.toml.header
.github/workflows/: release.yml  validate-rules.yml
i18n/: en.toml  pt.toml
src/: deps.rs  main.rs
