[package]
name = "why"
version = "1.3.0"
edition = "2021"
description = "Intelligent and agnostic diagnostics for Linux: why is your system slow/melting/crashing?"
license = "MIT"
repository = "https://github.com/tu/why"
rust-version = "1.80"

[dependencies]
sysinfo = "0.30"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
whoami = "1.5"
regex = "1.10"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"
rusqlite = "0.32"
ratatui = "0.28"
crossterm = "0.28"
lazy_static = "1.5"
rust-i18n = "3.1"  # For i18n
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
